# unified_pipeline_refactor

./: FairModel.py  README.md  pyproject.toml
FairLogue/: __init__.py
FairLogue/Component1/: __init__.py  containers.py  glaucoma_synth_component3.csv  intersectional_metrics.py  plots.py  synthetic_data.csv  synthetic_test.py  utilities.py
FairLogue/Component3/: Fairness.py  __init__.py  estimation_functions.py  helpers.py  model.py  outcome_models.py  plots.py  synthetic_test.py
FairSelect/: FairModel_helper.py  __init__.py  cli.py  core.py  deps.py  fairlogue_bridge.py  gui.py  main.py  params.py  run_fairness_benchmark_all_combinations.py  runner.py  techniques_combined.py  techniques_in.py  techniques_post.py  techniques_pre.py  test.py  utils.py
generated_glaucoma_stress_tests/: baseline.csv  in_compositional_group_specific.csv  in_group_balanced_ensemble.csv  in_multicalibration_group_miscalibration.csv  in_prejudice_remover_sensitive_attribute.csv  in_reductions_equalized_odds.csv  manifest.json  post_input_repair_measurement_shift.csv  post_multiaccuracy_residual_structure.csv  post_reject_option_around_boundary.csv  post_youden_threshold_heterogeneity.csv  pre_local_massaging_label_bias.csv  pre_reweight_y_a.csv  pre_smote_rare_positive.csv
